--- a/haval-h6-mqtt/package.json
+++ b/haval-h6-mqtt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haval-mqtt",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -8,7 +8,8 @@
     "mqtt": "^5.7.0",
     "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "node index.js"
