--- a/haval-h6-mqtt/config.json
+++ b/haval-h6-mqtt/config.json
@@ -1,8 +1,8 @@
 {
   "name": "GWM Brasil Haval H6 com MQTT",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "slug": "hassio_haval_h6_to_mqtt",
-  "description": "Haval H6 to MQTT",
+  "description": "Integração do GWM Haval H6 com o Home Assistant usando MQTT. Esta integração não é aplicável aos modelos Ora.",
   "init": false,
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/havaleiros/hassio-haval-h6-to-mqtt",
