--- a/haval-h6-mqtt/lovelace/HomeAssistant_Lovelace.yaml
+++ b/haval-h6-mqtt/lovelace/HomeAssistant_Lovelace.yaml
@@ -4,7 +4,7 @@ cards:
     name: ' '
     entity_picture: >
       [[[ return
-      states['device_tracker.{chassis}'].attributes.image ]]]
+      states['device_tracker.haval_{chassis}'].attributes.image ]]]
     size: 400px
     show_entity_picture: true
     tap_action:
@@ -19,8 +19,8 @@ cards:
           box-shadow: 0px 0px rgba(0,0,0,0);
         }
   - type: custom:mushroom-title-card
-    title: '{{ state_attr("device_tracker.{chassis}", "model") }}'
-    subtitle: '{{ state_attr("device_tracker.{chassis}", "color") }}'
+    title: '{{ state_attr("device_tracker.haval_{chassis}", "model") }}'
+    subtitle: '{{ state_attr("device_tracker.haval_{chassis}", "color") }}'
     title_tap_action:
       action: none
     subtitle_tap_action:
@@ -51,7 +51,7 @@ cards:
           - value: 100
             color: '#009c72'
         entities:
-          - entity: sensor.{chassis}_estado_de_carga_soc
+          - entity: sensor.haval_{chassis}_estado_de_carga_soc
       - type: custom:bar-card
         title: Combustível
         positions:
@@ -71,177 +71,177 @@ cards:
           - value: 60
             color: '#009c72'
         entities:
-          - entity: sensor.{chassis}_nivel_de_combustivel
+          - entity: sensor.haval_{chassis}_nivel_de_combustivel
   - type: horizontal-stack
     cards:
       - type: entities
         entities:
-          - entity: sensor.{chassis}_autonomia_combustao
-          - entity: sensor.{chassis}_nivel_de_combustivel
-          - entity: sensor.{chassis}_autonomia_hev
-          - entity: sensor.{chassis}_estado_de_carga_soc
-          - entity: sensor.{chassis}_quilometragem_total
+          - entity: sensor.haval_{chassis}_autonomia_combustao
+          - entity: sensor.haval_{chassis}_nivel_de_combustivel
+          - entity: sensor.haval_{chassis}_autonomia_hev
+          - entity: sensor.haval_{chassis}_estado_de_carga_soc
+          - entity: sensor.haval_{chassis}_quilometragem_total
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_do_ar_condicionado
+            entity: sensor.haval_{chassis}_estado_do_ar_condicionado
             name: Ar Condicionado
             icon: mdi:air-conditioner
             state: >
               {% if
-              states('sensor.{chassis}_estado_do_ar_condicionado')
+              states('sensor.haval_{chassis}_estado_do_ar_condicionado')
               == '0' %}
                 Desligado
               {% elif
-              states('sensor.{chassis}_estado_do_ar_condicionado')
+              states('sensor.haval_{chassis}_estado_do_ar_condicionado')
               == '1' %}
                 Ligado
               {% else %}
                 Desconhecido
               {% endif %}   
-          - entity: sensor.{chassis}_estado_de_carga_12v
+          - entity: sensor.haval_{chassis}_estado_de_carga_12v
             secondary_info: last-updated
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_carga
+            entity: sensor.haval_{chassis}_estado_da_carga
             name: Estado de carregamento
             icon: mdi:power-plug-battery
             state: >
-              {% if states('sensor.{chassis}_estado_da_carga') ==
+              {% if states('sensor.haval_{chassis}_estado_da_carga') ==
               '0' %}
                 Desconectado
-              {% elif states('sensor.{chassis}_estado_da_carga')
+              {% elif states('sensor.haval_{chassis}_estado_da_carga')
               == '1' %}
                 Carregando
-              {% elif states('sensor.{chassis}_estado_da_carga')
+              {% elif states('sensor.haval_{chassis}_estado_da_carga')
               == '3' %}
                 Finalizado
-              {% elif states('sensor.{chassis}_estado_da_carga')
+              {% elif states('sensor.haval_{chassis}_estado_da_carga')
               == '5' %}
                 Aguardando liberação
               {% else %}
                 Desconhecido
               {% endif %} 
-          - entity: sensor.{chassis}_tempo_de_carga
+          - entity: sensor.haval_{chassis}_tempo_de_carga
             card_mod:
               style: |
                 :host {
-                  display: {% if is_state('sensor.{chassis}_estado_da_carga','1') %} block {% else %} none {% endif %};
+                  display: {% if is_state('sensor.haval_{chassis}_estado_da_carga','1') %} block {% else %} none {% endif %};
                 }
       - type: entities
         entities:
-          - entity: sensor.{chassis}_pressao_do_pneu_dianteiro_direito
-          - entity: sensor.{chassis}_pressao_do_pneu_dianteiro_esquerdo
-          - entity: sensor.{chassis}_pressao_do_pneu_traseiro_direito
-          - entity: sensor.{chassis}_pressao_do_pneu_traseiro_esquerdo
+          - entity: sensor.haval_{chassis}_pressao_do_pneu_dianteiro_direito
+          - entity: sensor.haval_{chassis}_pressao_do_pneu_dianteiro_esquerdo
+          - entity: sensor.haval_{chassis}_pressao_do_pneu_traseiro_direito
+          - entity: sensor.haval_{chassis}_pressao_do_pneu_traseiro_esquerdo
           - entity: >-
-              sensor.{chassis}_temperatura_do_pneu_dianteiro_direito
+              sensor.haval_{chassis}_temperatura_do_pneu_dianteiro_direito
           - entity: >-
-              sensor.{chassis}_temperatura_do_pneu_dianteiro_esquerdo
+              sensor.haval_{chassis}_temperatura_do_pneu_dianteiro_esquerdo
           - entity: >-
-              sensor.{chassis}_temperatura_do_pneu_traseiro_direito
+              sensor.haval_{chassis}_temperatura_do_pneu_traseiro_direito
           - entity: >-
-              sensor.{chassis}_temperatura_do_pneu_traseiro_esquerdo
+              sensor.haval_{chassis}_temperatura_do_pneu_traseiro_esquerdo
   - type: horizontal-stack
     cards:
       - type: entities
         title: Portas
         entities:
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_trava
+            entity: sensor.haval_{chassis}_estado_da_trava
             name: Trava
             icon: >
-              {% if states('sensor.{chassis}_estado_da_trava') ==
+              {% if states('sensor.haval_{chassis}_estado_da_trava') ==
               '0' %}
                 mdi:car-door-lock
-              {% elif states('sensor.{chassis}_estado_da_trava')
+              {% elif states('sensor.haval_{chassis}_estado_da_trava')
               == '1' %}
                 mdi:car-door-lock-open
               {% else %}
                 mdi:cloud-question
               {% endif %}
             state: >
-              {% if states('sensor.{chassis}_estado_da_trava') ==
+              {% if states('sensor.haval_{chassis}_estado_da_trava') ==
               '0' %}
                 Fechado
-              {% elif states('sensor.{chassis}_estado_da_trava')
+              {% elif states('sensor.haval_{chassis}_estado_da_trava')
               == '1' %}
                 Aberto
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_do_porta_malas
+            entity: sensor.haval_{chassis}_estado_do_porta_malas
             name: Porta malas
             icon: mdi:car-door
             state: >
               {% if
-              states('sensor.{chassis}_estado_do_porta_malas') ==
+              states('sensor.haval_{chassis}_estado_do_porta_malas') ==
               '0' %}
                 Fechado
               {% elif
-              states('sensor.{chassis}_estado_do_porta_malas') ==
+              states('sensor.haval_{chassis}_estado_do_porta_malas') ==
               '1' %}
                 Aberto
               {% else %}
                 Desconhecido
               {% endif %}    
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_porta_dianteira_direita
+            entity: sensor.haval_{chassis}_estado_da_porta_dianteira_direita
             name: Dianteira direita
             icon: mdi:car-door
             state: >
               {% if
-              states('sensor.{chassis}_estado_da_porta_dianteira_direita')
+              states('sensor.haval_{chassis}_estado_da_porta_dianteira_direita')
               == '0' %}
                 Fechada
               {% elif
-              states('sensor.{chassis}_estado_da_porta_dianteira_direita')
+              states('sensor.haval_{chassis}_estado_da_porta_dianteira_direita')
               == '1' %}
                 Aberta
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_porta_dianteira_esquerda
+            entity: sensor.haval_{chassis}_estado_da_porta_dianteira_esquerda
             name: Dianteira esquerda
             icon: mdi:car-door
             state: >
               {% if
-              states('sensor.{chassis}_estado_da_porta_dianteira_esquerda')
+              states('sensor.haval_{chassis}_estado_da_porta_dianteira_esquerda')
               == '0' %}
                 Fechada
               {% elif
-              states('sensor.{chassis}_estado_da_porta_dianteira_esquerda')
+              states('sensor.haval_{chassis}_estado_da_porta_dianteira_esquerda')
               == '1' %}
                 Aberta
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_porta_traseira_direita
+            entity: sensor.haval_{chassis}_estado_da_porta_traseira_direita
             name: Traseira Direita
             icon: mdi:car-door
             state: >
               {% if
-              states('sensor.{chassis}_estado_da_porta_traseira_direita')
+              states('sensor.haval_{chassis}_estado_da_porta_traseira_direita')
               == '0' %}
                 Fechada
               {% elif
-              states('sensor.{chassis}_estado_da_porta_traseira_direita')
+              states('sensor.haval_{chassis}_estado_da_porta_traseira_direita')
               == '1' %}
                 Aberta
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_estado_da_porta_traseira_esquerda
+            entity: sensor.haval_{chassis}_estado_da_porta_traseira_esquerda
             name: Traseira Esquerda
             icon: mdi:car-door
             state: >
               {% if
-              states('sensor.{chassis}_estado_da_porta_traseira_esquerda')
+              states('sensor.haval_{chassis}_estado_da_porta_traseira_esquerda')
               == '0' %}
                 Fechada
               {% elif
-              states('sensor.{chassis}_estado_da_porta_traseira_esquerda')
+              states('sensor.haval_{chassis}_estado_da_porta_traseira_esquerda')
               == '1' %}
                 Aberta
               {% else %}
@@ -251,99 +251,99 @@ cards:
         title: Vidros
         entities:
           - type: custom:template-entity-row
-            entity: {chassis}_posicao_do_vidro_dianteiro_direito
+            entity: sensor.haval_{chassis}_posicao_do_vidro_dianteiro_direito
             name: Dianteiro direito
             icon: mdi:car-windshield-outline
             state: >
               {% if
-              states('{chassis}_posicao_do_vidro_dianteiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_direito')
               == '1' %}
                 Fechado
               {% elif
-              states('{chassis}_posicao_do_vidro_dianteiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_direito')
               == '2' %}
                 Aberto
               {% elif
-              states('{chassis}_posicao_do_vidro_dianteiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_direito')
               == '3' %}
                 Entreaberto
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_posicao_do_vidro_dianteiro_esquerdo
+            entity: sensor.haval_{chassis}_posicao_do_vidro_dianteiro_esquerdo
             name: Dianteiro esquerdo
             icon: mdi:car-windshield-outline
             state: >
               {% if
-              states('{chassis}_posicao_do_vidro_dianteiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_esquerdo')
               == '1' %}
                 Fechado
               {% elif
-              states('{chassis}_posicao_do_vidro_dianteiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_esquerdo')
               == '2' %}
                 Aberto
               {% elif
-              states('{chassis}_posicao_do_vidro_dianteiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_dianteiro_esquerdo')
               == '3' %}
                 Entreaberto
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_posicao_do_vidro_traseiro_direito
+            entity: sensor.haval_{chassis}_posicao_do_vidro_traseiro_direito
             name: Traseiro Direito
             icon: mdi:car-windshield-outline
             state: >
               {% if
-              states('{chassis}_posicao_do_vidro_traseiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_direito')
               == '1' %}
                 Fechado
               {% elif
-              states('{chassis}_posicao_do_vidro_traseiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_direito')
               == '2' %}
                 Aberto
               {% elif
-              states('{chassis}_posicao_do_vidro_traseiro_direito')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_direito')
               == '3' %}
                 Entreaberto
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_posicao_do_vidro_traseiro_esquerdo
+            entity: sensor.haval_{chassis}_posicao_do_vidro_traseiro_esquerdo
             name: Traseiro Esquerdo
             icon: mdi:car-windshield-outline
             state: >
               {% if
-              states('{chassis}_posicao_do_vidro_traseiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_esquerdo')
               == '1' %}
                 Fechado
               {% elif
-              states('{chassis}_posicao_do_vidro_traseiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_esquerdo')
               == '2' %}
                 Aberto
               {% elif
-              states('{chassis}_posicao_do_vidro_traseiro_esquerdo')
+              states('sensor.haval_{chassis}_posicao_do_vidro_traseiro_esquerdo')
               == '3' %}
                 Entreaberto
               {% else %}
                 Desconhecido
               {% endif %}
           - type: custom:template-entity-row
-            entity: sensor.{chassis}_posicao_do_teto_solar
+            entity: sensor.haval_{chassis}_posicao_do_teto_solar
             name: Teto Solar
             icon: mdi:car-windshield-outline
             state: >
               {% if
-              states('sensor.{chassis}_posicao_do_teto_solar') ==
+              states('sensor.haval_{chassis}_posicao_do_teto_solar') ==
               '3' %}
                 Fechado
               {% else %}
                 Aberto
               {% endif %}  
           - type: custom:bar-card
-            entity: sensor.{chassis}_posicao_do_teto_solar
+            entity: sensor.haval_{chassis}_posicao_do_teto_solar
             name: Teto Solar
             tap_action:
               action: none
@@ -362,11 +362,11 @@ cards:
             card_mod:
               style: |
                 :host {
-                  display: {% if states('sensor.{chassis}_posicao_do_teto_solar') == '3' %} none {% elif states('sensor.{chassis}_posicao_do_teto_solar') is none %} none {% else %} block {% endif %};
+                  display: {% if states('sensor.haval_{chassis}_posicao_do_teto_solar') == '3' %} none {% elif states('sensor.haval_{chassis}_posicao_do_teto_solar') is none %} none {% else %} block {% endif %};
                 }
   - type: map
     entities:
-      - entity: device_tracker.{chassis}
+      - entity: device_tracker.haval_{chassis}
     theme_mode: dark
     default_zoom: 16
     hours_to_show: 24
