--- a/haval-h6-mqtt/config.json
+++ b/haval-h6-mqtt/config.json
@@ -1,6 +1,6 @@
 {
   "name": "GWM Brasil Haval H6 com MQTT",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "slug": "hassio_haval_h6_to_mqtt",
   "description": "Integração do GWM Haval H6 com o Home Assistant usando MQTT.",
   "init": false,
@@ -8,7 +8,7 @@
   "url": "https://github.com/havaleiros/hassio-haval-h6-to-mqtt",
   "map": ["config:rw"],
   "options": {
-    "refresh_minutes": 5,
+    "refresh_time": 30,
     "mqtt_server": "mqtt://homeassistant.local:1883",
     "device_tracker_enabled": true
   },
@@ -16,10 +16,11 @@
     "haval_username": "email",
     "haval_password": "password",
     "haval_vin": "str",
+    "haval_pin": "password?",
     "mqtt_server": "str?",
     "mqtt_user": "str",
     "mqtt_pass": "password?",
-    "refresh_minutes": "int",
+    "refresh_time": "int",
     "device_tracker_enabled": "bool"
   }
 }
