--- a/haval-h6-mqtt/package.json
+++ b/haval-h6-mqtt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haval-mqtt",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -12,6 +12,7 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node localTest.js"
   }
 }
