--- a/haval-h6-mqtt/config.json
+++ b/haval-h6-mqtt/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "GWM Brasil com MQTT",
-  "version": "0.0.15",
+  "name": "GWM Brasil Haval H6 com MQTT",
+  "version": "0.0.14",
   "slug": "hassio_haval_h6_to_mqtt",
-  "description": "Integração com o Home Assistant usando MQTT para veículos GWM.",
+  "description": "Integração do GWM Haval H6 com o Home Assistant usando MQTT.",
   "init": false,
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "url": "https://github.com/havaleiros/hassio-haval-h6-to-mqtt",
