--- a/haval-h6-mqtt/package.json
+++ b/haval-h6-mqtt/package.json
@@ -6,13 +6,13 @@
     "dotenv": "^16.4.5",
     "md5": "^2.3.0",
     "mqtt": "^5.7.0",
-    "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
     "slugify": "^1.6.6",
     "yup": "^1.4.0"
   },
   "scripts": {
     "start": "node index.js",
-    "test": "node localTest.js"
+    "test": "node localTest.js",
+    "check-unused": "depcheck"
   }
 }
