--- a/haval-h6-mqtt/package.json
+++ b/haval-h6-mqtt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "haval-mqtt",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "dependencies": {
     "axios": "^1.8.2",
     "dotenv": "^16.4.5",
@@ -11,7 +11,8 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "test": "node localTest.js"
+    "start": "node index.js",    
+    "test": "node localTest.js",
+    "depcheck": "depcheck"
   }
 }
